ui-auth/envoy/route-to-service.yaml
static_resources:
    listeners:
      - name: envoy_listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 5050
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: http_traffic
                  route_config:
                    name: local_route
                    virtual_hosts:
                    - name: backend
                      domains:
                      - "*"
                      routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: ui-service
                          timeout: 1s
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters:
      - name: ui-service
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ui-service
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: ui-service
                        port_value: 5000
