ui-auth/envoy/simplest.yaml
static_resources:
    listeners:
      - name: envoy_listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 5050
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: http_traffic
                  route_config:
                    name: local_route
                    virtual_hosts:
                    - name: backend
                      domains:
                      - "*"
                      routes:
                      - match:
                          prefix: "/"
                        direct_response:
                          status: 200
                          body:
                            inline_string: "All good! This is the simplest envoy config."
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    # clusters:
    #   [CLUSTER CONFIGURATION]
